RESOLVED FIXED138760
[iOS] CoreText and CoreUI SPI are not available in public SDK
https://bugs.webkit.org/show_bug.cgi?id=138760
Summary [iOS] CoreText and CoreUI SPI are not available in public SDK
Daniel Bates
Reported 2014-11-14 15:48:09 PST
The iOS WebKit port makes use of the private headers from the CoreText and CoreUI frameworks. Towards building the port using the public SDK, we should forward declare the applicable SPI from these frameworks.
Attachments
Patch (16.50 KB, patch)
2014-11-14 16:43 PST, Daniel Bates
no flags
Patch (16.37 KB, patch)
2014-11-17 12:25 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2014-11-14 16:43:50 PST
Daniel Bates
Comment 2 2014-11-17 12:25:36 PST
WebKit Commit Bot
Comment 3 2014-11-17 12:28:06 PST
Attachment 241733 [details] did not pass style-queue: ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:38: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:39: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:40: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:41: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 4 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Kilzer (:ddkilzer)
Comment 4 2014-11-17 13:24:24 PST
Comment on attachment 241733 [details] Patch r=me
David Kilzer (:ddkilzer)
Comment 5 2014-11-17 13:26:18 PST
(In reply to comment #3) > Attachment 241733 [details] did not pass style-queue: > > > ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:38: enum members > should use InterCaps with an initial capital letter. > [readability/enum_casing] [4] > ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:39: enum members > should use InterCaps with an initial capital letter. > [readability/enum_casing] [4] > ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:40: enum members > should use InterCaps with an initial capital letter. > [readability/enum_casing] [4] > ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:41: enum members > should use InterCaps with an initial capital letter. > [readability/enum_casing] [4] > Total errors found: 4 in 9 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. I wonder if it would be worth disabling this check for *SPI.h headers? Seems to be a common theme that non-WebKit teams at Apple format their constants this way.
Daniel Bates
Comment 6 2014-11-17 13:42:18 PST
(In reply to comment #5) > [...] > > ERROR: Source/WebCore/platform/spi/cocoa/CoreTextSPI.h:41: enum members > > should use InterCaps with an initial capital letter. > > [readability/enum_casing] [4] > > Total errors found: 4 in 9 files > > > > > > If any of these errors are false positives, please file a bug against > > check-webkit-style. > > I wonder if it would be worth disabling this check for *SPI.h headers? We could disable such warnings for files whose name ends the suffix SPI.h and/or are in- or in a sub directory of- directory Source/WebCore/platform/spi. Such a change would be beneficial if we anticipate adding such enums regularly.
Daniel Bates
Comment 7 2014-11-17 13:52:53 PST
Comment on attachment 241733 [details] Patch Clearing flags on attachment: 241733 Committed r176229: <http://trac.webkit.org/changeset/176229>
Daniel Bates
Comment 8 2014-11-17 13:52:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.