Source/WebCore/rendering/RenderThemeIOS.mm
@@ -30,6 +30,7 @@
 #import "CSSPrimitiveValue.h"
 #import "CSSToLengthConversionData.h"
 #import "CSSValueKeywords.h"
+#import "CoreTextSPI.h"
 #import "DateComponents.h"
 #import "Document.h"
 #import "FloatRoundedRect.h"
@@ -47,8 +48,8 @@
 #import "LocalizedDateCache.h"
 #import "NodeRenderStyle.h"
 #import "Page.h"
-#import "PlatformLocale.h"
 #import "PaintInfo.h"
+#import "PlatformLocale.h"
 #import "RenderObject.h"
 #import "RenderProgress.h"
 #import "RenderStyle.h"
@@ -59,7 +60,6 @@
 #import "UserAgentStyleSheets.h"
 #import "WebCoreThreadRun.h"
 #import <CoreGraphics/CoreGraphics.h>
-#import <CoreText/CTFontDescriptorPriv.h>
 #import <objc/runtime.h>
 #import <wtf/NeverDestroyed.h>
 #import <wtf/RefPtr.h>
@@ -80,14 +80,6 @@ SOFT_LINK_CONSTANT(UIKit, UIContentSizeCategoryDidChangeNotification, CFStringRe
 
 @implementation WebCoreRenderThemeBundle
 @end
-
-// This is a temporary hack to build on iOS. Should be removed as soon as CT fixes the header files.
-extern const CFStringRef kCTUIFontTextStyleShortHeadline CT_AVAILABLE(10_10, 7_0);
-extern const CFStringRef kCTUIFontTextStyleShortBody CT_AVAILABLE(10_10, 7_0);
-extern const CFStringRef kCTUIFontTextStyleShortSubhead CT_AVAILABLE(10_10, 7_0);
-extern const CFStringRef kCTUIFontTextStyleShortFootnote CT_AVAILABLE(10_10, 7_0);
-extern const CFStringRef kCTUIFontTextStyleShortCaption1 CT_AVAILABLE(10_10, 7_0);
-extern const CFStringRef kCTUIFontTextStyleTallBody CT_AVAILABLE(10_10, 7_0);
 
 namespace WebCore {
 
