Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -197,8 +197,7 @@
 #include "RemoteLayerTreeDrawingArea.h"
 #include "WebVideoFullscreenManager.h"
 #include <CoreGraphics/CoreGraphics.h>
-#include <CoreText/CTFontDescriptorPriv.h>
-#include <CoreText/CTFontPriv.h>
+#include <WebCore/CoreTextSPI.h>
 #include <WebCore/Icon.h>
 #endif
 
